@@ -67,7 +67,7 @@ syn keyword	bklExtProp	file archs configurations contained
 " program/lib/dll ones.
 syn keyword	bklBuildProp	archs basename configurations contained
 syn keyword	bklBuildProp	compiler-options c-compiler-options cxx-compiler-options contained
-syn keyword	bklBuildProp	defines headers includedirs libdirs libs link-options outputdir sources pic multithreading contained
+syn keyword	bklBuildProp	allow-undefined defines headers includedirs libdirs libs link-options outputdir sources pic multithreading contained
 
 syn keyword	bklBool 	false true contained
 syn region	bklBoolRHS	matchgroup=Normal start="= *" end=";" contains=bklBool contained
