@@ -203,6 +203,24 @@ class NativeCompiledType(TargetType):
                      latter could be linked into a shared lib too) are linked
                      with -fPIC and executables are not.
                      """),
+            Property("allow-undefined",
+                 type=BoolType(),
+                 default=lambda target: target.type.link_allow_undefined,
+                 inheritable=True,
+                 doc="""
+                     Allow undefined symbols when linking.
+
+                     By default, all symbols must be defined when linking the
+                     target (even if it is a shared library, for which
+                     undefined symbols are traditionally allowed by default
+                     under Unix), however loadable modules may need to contain
+                     references to symbols in the program loading them that
+                     can't be resolved at the link time and for them this
+                     property may need to be set to ``false``.
+
+                     Note that currently this property is only supported by
+                     "gnu" toolset and is silently ignored by all the others.
+                     """),
             Property("multithreading",
                  type=BoolType(),
                  default=True,
@@ -220,6 +238,8 @@ class NativeCompiledType(TargetType):
         ]
 
     use_pic_by_default = True
+
+    link_allow_undefined = False
 
     def target_file(self, toolset, target):
         """
